--- a/src/RMSWorkspace.ini
+++ b/src/RMSWorkspace.ini
@@ -6,7 +6,7 @@
 #  Primarily depends upon the value of RMSProductionModel.
 #
 
-LogMsg INFO "*** Load from RND /home/v.lavrentev/project/rnd/OSL/TextureBombing/src/RMSWorkspace.ini ***"
+LogMsg INFO "*** Load from RND /OSL/TextureBombing/src/RMSWorkspace.ini ***"
 
 set rdir [GetEnv RMS_SCRIPT_PATHS]
 LogMsg INFO $rdir
