--- a/src/RenderMan_for_Maya.ini
+++ b/src/RenderMan_for_Maya.ini
@@ -8,7 +8,7 @@
 #--------------------------------------------------------------------------
 #
 
-LogMsg INFO "*** Load from RND /home/v.lavrentev/project/rnd/OSL/TextureBombing/src ***"
+LogMsg INFO "*** Load from RND /OSL/TextureBombing/src ***"
 
 set rdir [GetEnv RMS_SCRIPT_PATHS]
 
